[package]
name = "simfile"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrl-z = "0.1.0"
msd = "0.3.0"
serde = {version = "1.0.138", default-features = false}

[dev-dependencies]
claim = {git = "https://github.com/Anders429/rust-claim"}
more-asserts = "0.3.0"
serde_test = "1.0.138"
tempfile = "3.3.0"
