[package]
name = "simfile"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2021"
rust-version = "1.58.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/simfile"
description = "Reading, writing, manipulating, and converting simfiles."
categories = ["data-structures", "encoding", "game-development", "parser-implementations"]
keywords = ["stepmania", "simfile", "stepfile", "rhythm", "simulator"]

[dependencies]
arrayvec = "0.7.2"
ctrl-z = "0.1.0"
msd = "0.4.0"
serde = {version = "1.0.138", default-features = false}

[dev-dependencies]
claim = {git = "https://github.com/Anders429/rust-claim"}
more-asserts = "0.3.0"
serde_test = "1.0.138"
tempfile = "3.3.0"
